--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,25 @@
+body{
+    background-color: black;
+}
+
+
+
 
 canvas {
-    border: solid black;
-    border-left: solid black 10px;
-    border-right: solid black 10px;
+
+    border: solid red;
+    border-left: solid red 10px;
+    border-right: solid red 10px;
     border-right-style:double;
     border-left-style:double;
-    border-bottom: solid black 3px;
-    border-top: solid black 3px;
+    border-bottom: solid red 3px;
+    border-top: solid red3px;
+    background-color: white;
 
 }
 
 h1{
+    color:  white;
     text-align: center;
 }
 
