make game over screen

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(./images/8172279.jpeg);
+    background-image: url("./images/8172279.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     
