--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+* {
+    font-family: 'Press Start 2P', cursive;
+}
+
+
+
 body{
     background-image: url("./images/8172279.jpeg");
     background-repeat: no-repeat;
@@ -14,7 +20,7 @@ body{
     justify-content: center;
     width: 100%;
     border-color: solid black;
-    font-size: larger;
+    
 }
 
 
@@ -22,9 +28,9 @@ button{
 position: absolute;
 margin-top: 25%;
 margin-left: 3%;
-height: 6%;
-width: 8%;
-background-color: rgba(34, 116, 77, 0.798);
+height: 9%;
+width: %;
+background-color: rgba(148, 43, 37, 0.798);
 border-style:double;
 border-color: black;
 
