--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,12 @@ body{
 
 button{
 
-margin-left: 3%;
-padding: 1%;
+margin-left: 1%;
+padding: 2%;
 background-color: rgba(148, 43, 37, 0.798);
 border-style:double;
 border-color: black;
+
 }
 
 
@@ -48,6 +49,7 @@ border-color: black;
 
 
 canvas {
+    background-image: url("./images/Free-Pixel-Art-Forest/Preview/Background.png");
     border: solid black;
     border-left: solid 2px;
     border-right: solid 2px;
@@ -57,6 +59,7 @@ canvas {
 }
 
 #highScore{
+
     color: white;
 }
 
